# imgui-support

./: Cargo.toml  README.md
common/: Cargo.toml
common/src/: events.rs  geometry.rs  lib.rs
src/: lib.rs  renderer_common.rs  standalone.rs  xplane.rs
src/standalone/: keymap.rs  platform.rs  renderer.rs  utils.rs
src/xplane/: platform.rs  renderer.rs
standalone/: Cargo.toml
standalone/src/: lib.rs  platform.rs  renderer.rs  utils.rs
xplane/: Cargo.toml
xplane/src/: lib.rs  platform.rs  renderer.rs  ui.rs  utils.rs
xplane/src/ui/: keymap.rs
