[package]
name = "imgui-support"
version = "0.1.0"
edition = "2021"
authors = ["David Dunwoody <david@flightlevelchange.co.uk>"]

[features]
standalone = ["dep:glfw"]
xplane = ["dep:xplm", "dep:xplm-ext", "dep:xplm-sys"]

[dependencies]
cfg-if = "1.0.0"
dcommon = { git = "https://github.com/flightlevelchange/davionics.git", features = ["ui"] }
gl21 = { git = "https://github.com/ddunwoody/gl21.git" }
glfw = { version = "0.51.0", optional = true }
image = { version = "0.24.6", default-features = false, features = ["jpeg", "png"] }
imgui = { git = "https://github.com/ddunwoody/imgui-rs.git", branch = "0.11-ddunwoody" }
tracing = "0.1.37"
xplm = { git = "https://github.com/ddunwoody/rust-xplm.git", optional = true }
xplm-ext = { git = "https://github.com/flightlevelchange/davionics.git", optional = true, features = ["ui"] }
xplm-sys = { git = "https://github.com/ddunwoody/xplm-sys.git", optional = true }

