[workspace]

members = [
    "common",
    "standalone",
    "xplane",
]

resolver = "2"

[workspace.package]
authors = ["David Dunwoody <david.dunwoody@gmail.com>"]
edition = "2021"
version = "0.1.0"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1

[workspace.metadata.release]
publish = false
shared-version = true
tag-prefix = ""
