[package]
name = "imgui-support"
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
gl21 = { git = "https://github.com/ddunwoody/gl21.git" }
image = { version = "0.24.6", default-features = false, features = ["jpeg", "png"] }
imgui = { git = "https://github.com/ddunwoody/imgui-rs.git", branch = "0.11-ddunwoody" }
mint = "0.5.9"
serde = { version = "1.0.188", features = ["derive"] }
tracing = "0.1.37"

